--- a/style.css
+++ b/style.css
@@ -39,5 +39,16 @@ a {
 .comp_divider{
     border-radius: 100%;
 }
+.login-BG{
+    background-image: url("./ressources/pics/sign-in-4.png");
+    background-color: #ffaf2a;
+    height:42em;
+    background-position: top;
+    background-repeat: no-repeat;
+}
+.minusTop{
+    margin-top: -4rem;
+    background-color: white;
+}
 
 
