--- a/style.css
+++ b/style.css
@@ -103,3 +103,10 @@ a {
     font-size: 0.7rem;
     font-family: 'Open Sans', sans-serif;
 }
+
+.small-tag{
+    border-radius: 40px;
+    padding: 0.3em;
+    padding-left: 0.6em;
+    padding-right:0.6em;
+}
