--- a/style.css
+++ b/style.css
@@ -109,4 +109,9 @@ a {
     padding: 0.3em;
     padding-left: 0.6em;
     padding-right:0.6em;
+    margin-left: .2em;
+}
+.cover{
+ padding: 0.2em;   
+object-fit:contain;
 }
