--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a {
 }
 .btn-sm-my{
     font-size: .875em;
-    border-radius: 10%;
+    border-radius: 40px;
     padding-top: .2em;
     padding-bottom: .2em;
 }
@@ -62,6 +62,14 @@ a {
     background-color: #ffaf2a;
     height:42em;
     background-position: center;
+    background-repeat: no-repeat;
+    
+}
+.User-BG{
+    background-image: url("./ressources/pics/bermuda_user.png");
+    background-color: #ffaf2a;
+    height:42em;
+    background-position: top;
     background-repeat: no-repeat;
     
 }
@@ -114,4 +122,8 @@ a {
 .cover{
  padding: 0.2em;   
 object-fit:contain;
+}
+.user-Img{
+    height: 8em;
+    width: 8em;
 }
