--- a/style.css
+++ b/style.css
@@ -73,6 +73,13 @@ a {
     background-repeat: no-repeat;
     
 }
+.Admin-BG{
+    background-image: url("./ressources/pics/admin.png");
+    background-color: #ffaf2a;
+    height:42em;
+    background-position: top;
+    background-repeat: no-repeat;
+}
 .minusTop{
     margin-top: -4rem;
     background-color: white;
