--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ object-fit:contain;
     margin-left: 0.2rem;
 }
 
-@media screen and (max-width: 767.98px){
+@media  (max-width: 767.98px){
 
     .headline{
         font-size: 1.5em;
